[package]
name = "site_parser"
version = "0.1.0"
authors = ["HumMan"]
edition = "2018"

[dependencies]
reqwest = "0.9" 
select = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
html-entities = "0.1.0"
htmlescape = "0.3.1"
lazy_static = "1.3"
regex = "1"
encoding_rs = "0.8.17"
encoding_rs_io = "0.1.6"
zip = "0.5"
walkdir = "1.0"